# ai-recognition-system-v2

./: .env.example  .gitignore  README.md  blockchain_test_commands.md  debug_clustering.py  demo_examples.py  install_helper.py  manifest.json  process_photos_batch.sh  pyproject.toml  requirements.txt  reset_and_test_clustering.py  setup.cfg  test_append_to_095.py  test_blockchain_integration_live.py  test_clustering_accuracy.py  test_clustering_append.py  test_clustering_append_video.py  test_clustering_batch.py  test_commands.md  test_full_pipeline_blockchain.py  test_glasses_tolerance.py  test_gps_and_clustering.py  test_gps_extraction.py  test_gps_no_location.py  test_phase2_phase3.py  test_real_media.py  test_threshold_analysis.py  test_video_gps_integration.py  test_with_venv.sh  test_yomi_all.py  threshold_095_append_results.json  threshold_analysis_results.json
aggressive_clustering_test/: test_stroll_result.json
clustering_tests/test_20250622_231308/: clustering_analysis.json  combined_clustering_analysis.json  group_result.json  raw_result.json  yomi1_result.json  yomi2_result.json  yomi3_result.json  yomi4_result.json  yomi5_result.json
clustering_tests_glasses/test_20250622_235509/: clustering_analysis.json  raw_result.json
clustering_tests_threshold_91/test_20250622_235718/: clustering_analysis.json  combined_clustering_analysis.json  lady_result.json  people-collage-design_result.json  raw_result.json  yomi4_result.json  yomi5_result.json
config/: clustering_fix.yaml  default.dbscan.yaml  default.yaml  glasses_test.yaml  models.yaml
data/: cluster_registry_before_glasses_test.json
data/face_db/: faces.pkl
docs/: CLAUDE.local.md  CLAUDE.md  INSTALLATION.md  architecture.md  blockchain_integration_plan.md  clustering_plan.md  specs.md  tasks.md  todo-list.md
gps_test_output/: group_detailed_result.json  test_stroll_detailed_result.json
scripts/: example_face_detection.py  install_dependencies.sh  manage_faces.py  process_folder.py  process_image.py  process_video.py  setup.py  test_face_recognition.py  test_system.py  test_video_system.py
src/core/: blockchain_integration.py  chip_generator.py  face_clusterer.py  face_detector.py  face_recognizer.py  gps_ocr_extractor.py  metadata_extractor.py
src/outputs/: json_formatter.py
src/processors/: base_processor.py  batch_processor.py  image_processor.py  media_processor_base.py  video_processor.py
src/utils/: config.py  file_handler.py  logger.py
test_output/: blockchain_ready.json  image_result.json  video_blockchain_ready.json  video_result.json
tests/: conftest.py  run_tests.py  test_base_processor.py  test_blockchain_integration.py  test_clustering.py  test_config.py  test_face_detection.py  test_face_detector.py  test_file_handler.py  test_logger.py
threshold_test_0.95/: cluster_registry.json  combined_clustering_analysis.json  group_result.json  lady_result.json  location_test_video_result.json  test1_video_result.json  test_stroll_video_result.json  town_test_video_result.json  video_clustering_analysis.json
threshold_test_0.96/: cluster_registry.json
threshold_test_0.97/: cluster_registry.json
threshold_test_0.98/: cluster_registry.json
threshold_test_0.99/: cluster_registry.json
